# uLLM-project

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.md  進捗確認_for_user.md
crates/ullm-engine/: Cargo.toml
crates/ullm-engine/examples/: sq8_ck_full_model.rs  sq8_ck_generate.rs  sq8_ck_layer.rs  sq8_ck_serving.rs  sq8_ck_serving_performance.rs  sq8_optimized_fixture.rs  sq8_reference_batch_bench.rs  sq8_reference_linear.rs  verify_sq8_canonical.rs
crates/ullm-engine/src/: adapter_admission.rs  adapter_fixtures.rs  aq.rs  aq4_benchmark_worker_protocol.rs  aq4_benchmark_worker_runtime.rs  aq4_package_runtime.rs  aq4_worker_backend.rs  backend_dispatch.rs  backend_operation_registry.rs  cpu_reference_executor.rs  decode_runner.rs  decoder.rs  execution_batch.rs  execution_trace.rs  format_id.rs  golden.rs  host_bytes.rs  inference_api.rs  lib.rs  loader.rs  main.rs  model_graph.rs  package.rs  qwen35_aq4_head_runtime.rs  qwen35_aq4_layer_runtime.rs  qwen35_aq4_model_runtime.rs  qwen35_aq4_session.rs  qwen35_package_contract.rs  qwen3_loader.rs  qwen3_names.rs  reasoning.rs  roctx.rs  scheduler.rs  served_model.rs  session_worker_backend.rs  sq.rs  sq8_embedding_runtime.rs  sq8_generation_runtime.rs  sq8_layer_oracle.rs  sq8_layer_runtime.rs  (+17 more)
crates/ullm-engine/src/main_parts/: part_00.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs
crates/ullm-engine/tests/: sq8_worker_binary.rs  worker_profile_snapshot.rs
deploy/: README.md
docs/: aq4-layer0-qkv-runtime-probe.md  words.txt
services/openai-gateway/: README.md  pyproject.toml
services/openai-gateway/src/ullm_openai_gateway/: __init__.py  __main__.py  app.py  errors.py  reasoning.py  schemas.py  served_model.py  settings.py  tokenizer.py  worker.py
services/openai-gateway/tests/: test_app.py  test_main.py  test_reasoning.py  test_schemas.py  test_served_model.py  test_settings.py  test_tokenizer.py  test_worker.py
services/openai-gateway/tests/fixtures/served-model/aq4/: promotion.json  served-model.json
services/openai-gateway/tests/fixtures/served-model/aq4/tokenizer/: tokenizer.json  tokenizer_config.json
services/openai-gateway/tests/fixtures/served-model/sq8/: promotion.json  served-model-fq6.json  served-model.json
(+5594 files in other folders)
