[package]
name = "ullm-engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = []
rocm-ck-gfx1201 = ["ullm-runtime-sys/rocm-ck-gfx1201"]

[dependencies]
memchr = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ullm-runtime-sys = { path = "../ullm-runtime-sys" }
