[package]
name = "ullm-engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = []
rocm-ck-gfx1201 = ["ullm-runtime-sys/rocm-ck-gfx1201"]

[dependencies]
memchr = "2.7"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ullm-runtime-sys = { path = "../ullm-runtime-sys" }

[[bin]]
name = "ullm-sq8-worker"
path = "src/bin/ullm-sq8-worker.rs"
required-features = ["rocm-ck-gfx1201"]

[[bin]]
name = "ullm-aq4-worker"
path = "src/bin/ullm-aq4-worker.rs"

[[bin]]
name = "ullm-aq4-p2-full-model"
path = "src/bin/ullm-aq4-p2-full-model.rs"

[[bin]]
name = "ullm-aq4-p2-path-oracle"
path = "src/bin/ullm-aq4-p2-path-oracle.rs"

[[example]]
name = "sq8_ck_layer"
required-features = ["rocm-ck-gfx1201"]

[[example]]
name = "sq8_ck_full_model"
required-features = ["rocm-ck-gfx1201"]

[[example]]
name = "sq8_ck_generate"
required-features = ["rocm-ck-gfx1201"]

[[example]]
name = "sq8_ck_serving"
required-features = ["rocm-ck-gfx1201"]
